# investalyze

./: .gitignore  cleaning.toml  ingest.toml  main.py  pyproject.toml  quality_log.toml  ruff.toml  stooq_tickers.toml
data/yahoo/raw/: ticker.csv
docs/: ingest_data.md  manual.md
docs/superpowers/plans/: 2026-06-22-ingest-housekeeping.md
docs/superpowers/specs/: 2026-06-22-ingest-housekeeping-design.md  2026-06-23-yahoo-metadata-design.md
experiments/: dataset.py  xgb_train.py
experiments/classify_industry_from_window/: industry_classification.ipynb  industry_classification_xgb.ipynb
experiments/classify_sector_from_window/: sector_classification.ipynb  sector_classification_xgb.ipynb
experiments/classify_ticker_from_window/: ticker_classification.ipynb  ticker_classification_10_blocks.ipynb  ticker_classification_20_blocks.ipynb  ticker_classification_do_01_bl_20.ipynb  ticker_classification_xgb.ipynb
experiments/forecast_excess_return/: forecast_train.py  ticker_forecast_xgb.ipynb
experiments/rank_future_performance/: ticker_rank_xgb.ipynb
experiments/ticker_classification/: dataset.py
experiments/ticker_classification/classify_ticker_from_window/: model.py  ticker_classification.ipynb  ticker_classification_10_blocks.ipynb  ticker_classification_20_blocks.ipynb  ticker_classification_do_01_bl_20.ipynb  ticker_classification_xgb.ipynb  train.py
experiments/ticker_classification/forecast_excess_return/: ticker_forecast_xgb.ipynb
experiments/ticker_classification/rank_future_performance/: rank_train.py  runlog.py  ticker_rank_xgb.ipynb
notebooks/: 1_explore_db.ipynb  2_ticker_profile.ipynb  3_data_quality.ipynb  3_segment_explore.ipynb  4_vector_structure.ipynb  5_motifs_transitions.ipynb  5_segment_explore.ipynb  6_vector_structure.ipynb  7_fundamentals_coverage.ipynb  7_motifs_transitions.ipynb  9999_data_quirks.ipynb  helpers.py
scripts/: migrate_company_tables.py  migrate_pascalcase_columns.py
src/investalyze/analysis/: encodings.py  factors.py  reductions.py  segments.py
src/investalyze/apps/: __init__.py  __main__.py  app.py  universes.py
src/investalyze/cleaning/: fix.py  (+7 more)
tests/: test_cleaning.py  test_config.py  test_data_quality_actions.py  test_encodings.py  test_factors.py  test_housekeeping.py  test_logging.py  test_migrate_company_tables.py  test_migrate_pascalcase_columns.py  test_orchestrator.py  test_quality_corporate_actions.py  test_quality_fundamentals_identities.py  test_quality_fundamentals_qsum.py  test_quality_fundamentals_sanity.py  test_quality_log.py  test_quality_prices_ohlc.py  test_quality_prices_series.py  test_quality_registry.py  test_quality_writer.py  test_rebuild_companies.py  test_rebuild_market_instruments.py  test_reductions.py  test_screener_data.py  test_screener_logic.py  test_segments.py  test_simfin_acquire.py  test_simfin_run.py  test_simfin_specs.py  test_simfin_transform.py  test_statements.py  test_stooq_acquire.py  test_stooq_run.py  test_stooq_transform.py  test_storage.py  test_ticker_diff.py  test_ticker_page.py  test_toml_io.py  test_universes.py  test_yahoo_adjust.py  test_yahoo_housekeeping.py  (+5 more)
(+49 files in other folders)
