[project]
name = "investalyze"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.9.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "plotly>=6.7.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "requests>=2.31",
    "seaborn>=0.13.2",
    "simfin>=1.0.2",
    "statsmodels>=0.14.2",
    "yfinance>=1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/investalyze"]

[dependency-groups]
dev = [
    "pandas-stubs>=2",
    "pytest>=9.1.1",
]
