[project]
name = "investalyze"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.5.4",
    "faiss-cpu>=1.14.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "plotly>=6.7.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "requests>=2.31",
    "scikit-learn>=1.5.0",
    "seaborn>=0.13.2",
    "simfin>=1.0.2",
    "statsmodels>=0.14.2",
    "torch==2.5.1",
    "xgboost>=3.3.0",
    "yfinance>=1.3.0",
]

# Pinned: newer PyTorch CUDA builds (cu124+) dropped compute capability 6.1 (Pascal, e.g. the
# 1080 Ti) from their precompiled kernels. 2.5.1+cu121 is the newest build confirmed to still run
# real CUDA kernels on this GPU (torch.randn(..., device='cuda') + matmul verified).
[tool.uv.sources]
torch = { index = "pytorch-cu121" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/investalyze"]

[dependency-groups]
dev = [
    "pandas-stubs>=2",
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
# Put the repo root on sys.path so root-level packages (e.g. `scripts`) import
# under pytest. `investalyze` itself resolves via its editable install.
pythonpath = ["."]
